# plaster-damage-detection

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: 01-SRGAN_example.ipynb
src/srgan/: README.md  __init__.py  srgan.py
