[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "Plaster damage detection project for Data Science Workshop course."
authors = [
  { name = "Adrian Stańdo" },
  { name = "Kalina Jażdżyk" },
  { name = "Szymon Maksymiuk" },
  { name = "Władysław Olejnik" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
